# yantrikdb-server

./: .gitignore  Cargo.toml  README.md  SERVER_README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/aidb-core/: Cargo.toml
crates/aidb-core/src/: engine.rs  lib.rs  patterns.rs  replication.rs  schema.rs  sync.rs  triggers.rs  types.rs
crates/aidb-core/src/base/: scoring.rs  types.rs
crates/aidb-core/src/engine/: cognition.rs  graph_ops.rs  lifecycle.rs  recall.rs  record.rs  storage.rs  tests.rs
crates/aidb-python/src/: py_engine.rs  py_types.rs
crates/aidb-python/src/py_engine/: memory.rs
crates/yantrik/: Cargo.toml
crates/yantrik-ui/: Cargo.toml
crates/yantrikdb-companion/: Cargo.toml
crates/yantrikdb-core/: Cargo.toml
crates/yantrikdb-core/benches/: engine_bench.rs
crates/yantrikdb-core/examples/: profile_recall.rs
crates/yantrikdb-core/src/: lib.rs
crates/yantrikdb-core/src/base/: bench_utils.rs  compression.rs  encryption.rs  mod.rs  schema.rs  scoring.rs  types.rs  vault.rs
crates/yantrikdb-core/src/cognition/: action.rs  agenda.rs  analogy.rs  attention.rs  belief.rs  belief_network.rs  belief_query.rs  benchmark.rs  benchmark_ck4.rs  benchmark_ck5.rs  calibration.rs  causal.rs  coherence.rs  consolidate.rs  contradiction.rs  counterfactual.rs  evaluator.rs  experimenter.rs  extractor.rs  flywheel.rs  hawkes.rs  intent.rs  introspection.rs  metacognition.rs  mod.rs  narrative.rs  observer.rs  patterns.rs  personality.rs  personality_bias.rs  perspective.rs  planner.rs  policy.rs  query_dsl.rs  receptivity.rs  replay.rs  schema_induction.rs  skills.rs  state.rs  suggest.rs  (+5 more)
crates/yantrikdb-core/src/distributed/: conflict.rs  mod.rs  replication.rs  seed_categories.rs  sync.rs
crates/yantrikdb-core/src/engine/: action.rs  agenda.rs  analogy_engine.rs  belief.rs  belief_network_engine.rs  calibration.rs  causal.rs  cognition.rs  coherence.rs  conflict.rs  counterfactual_engine.rs  evaluator.rs  experimenter.rs  extractor.rs  feedback.rs  flywheel.rs  graph_ops.rs  (+32 more)
crates/yantrikdb-ml/: Cargo.toml
crates/yantrikdb-ml/src/: chat_template.rs  lib.rs  traits.rs  types.rs
crates/yantrikdb-protocol/src/: lib.rs  messages.rs  opcodes.rs
crates/yantrikdb-python/: Cargo.toml  pyproject.toml
crates/yantrikdb-python/src/: lib.rs  py_consolidate.rs  py_tenant.rs  py_triggers.rs  py_types.rs
crates/yantrikdb-python/src/py_engine/: cognition.rs  graph.rs  memory.rs  mod.rs  session_temporal.rs  sync.rs
crates/yantrikdb-server/: Cargo.toml
crates/yantrikdb-server/src/: background.rs  command.rs  config.rs  control.rs  handler.rs  http_gateway.rs  main.rs  server.rs  tls.rs
crates/yantrikdb-server/src/cluster/: client.rs  election.rs  heartbeat.rs  mod.rs  peers.rs  replication.rs  server.rs  state.rs  sync_loop.rs
crates/yantrikdb-server/tests/: cluster_integration.rs  http_integration.rs
crates/yantrikdb-wasm/: Cargo.toml
crates/yantrikdb-witness/: Cargo.toml
crates/yantrikdb-witness/src/: main.rs
crates/yql/src/: commands.rs  format.rs
deploy/kubernetes/: README.md  yantrikdb-cluster.yaml  yantrikdb-single.yaml
docker/: Dockerfile.witness  Dockerfile.yantrikdb  Dockerfile.yql
docs/showcase/: shakespeare_deep_seed.py
docs/whitepaper/: aidb_whitepaper.md
scripts/: run_eval.py
src/aidb/: __init__.py  api.py  cli.py  consolidate.py  engine.py  schema.py  triggers.py
src/aidb/eval/: harness.py  synthetic.py
src/aidb/mcp/: __init__.py  resources.py  server.py  tools.py
src/yantrikdb/: __init__.py  api.py  cli.py  consolidate.py  triggers.py
src/yantrikdb/adapters/: __init__.py  crewai.py  langchain.py  openai_agents.py
src/yantrikdb/agent/: __init__.py  background.py  companion.py  config.py  context.py  embedder.py  learning.py  llm.py  service.py  tools.py  urges.py  voice.py
src/yantrikdb/eval/: harness.py  life_simulation.py  persona_aisha.py  persona_marcus.py  synthetic.py
src/yantrikdb/sync/: __init__.py  transport.py
tests/: test_adapters.py  test_adaptive_e2e.py  test_api.py  test_cli.py  test_cognition.py  test_consolidate.py  test_engine.py  test_eval.py  test_mcp_tools.py  test_phases.py  test_sync.py  test_triggers.py
(+21 files in other folders)
