[workspace]
resolver = "2"
members = [
    "crates/yantrikdb-protocol",
    "crates/yantrikdb-server",
    "crates/yantrikdb-witness",
    "crates/yantrikdb-python",
    "crates/yql",
]
exclude = [
    "crates/yantrikdb-wasm",
]

# Optimize dependencies (candle, tokenizers) even in dev builds.
# Without this, quantized LLM inference is ~100x slower.
[profile.dev.package."*"]
opt-level = 2
