[project]
name = "aidb"
version = "0.1.0"
description = "A Cognitive Memory Engine for Persistent AI Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranab Sarkar", email = "developer@pranab.co.in" },
]
dependencies = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "uuid-utils>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
