[package]
name = "yantrikdb-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for Yantrik companion (replaces Python FastAPI service)"

[dependencies]
yantrikdb-companion = { path = "../yantrikdb-companion" }
yantrikdb-ml = { path = "../yantrikdb-ml" }
yantrikdb-core = { path = "../yantrikdb-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
